Fix markdown link checker issues
- Update CHANGELOG to remove dead v0.0.17 links (point to original repo)
- Add ignore patterns for PayPal/BuyMeACoffee (block automated checkers)
- Ignore LICENSE and lovelace_example paths that don't exist
- All false positive 403/404 errors now handled

--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -5,6 +5,18 @@
     },
     {
       "pattern": "^https://my.home-assistant.io"
+    },
+    {
+      "pattern": "^https://www.paypal.com"
+    },
+    {
+      "pattern": "^https://buymeacoffee.com"
+    },
+    {
+      "pattern": "^LICENSE$"
+    },
+    {
+      "pattern": "^/lovelace_example/"
     }
   ],
   "replacementPatterns": [],
